test/fail/brace-style.js
/* eslint-disable no-unused-vars -- We're only testing ESLint rules. */

// FAIL: brace-style

if (console) { console.log('hello') }
